fea-rs/test-data/compile-tests/mini-latin/bad/cv_params.fea
feature cvNO {
    # not valid in this feature
    cvParameters {
    };
} cvNO;

feature cv01 {
    sub a by b;
    cvParameters {
    };
} cv01;

