fea-rs/test-data/compile-tests/mini-latin/bad/cv_params.ERR
error: cvParameters block only valid in cv01-cv99 features
in ./test-data/compile-tests/mini-latin/bad/cv_params.fea at 3:4
  | 
3 |     cvParameters {
  |     ^^^^^^^^^^^^

error: cvParameters must precede any rules
in ./test-data/compile-tests/mini-latin/bad/cv_params.fea at 9:4
  | 
9 |     cvParameters {
  |     ^^^^^^^^^^^^
